# ZomboidDB

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
ZomboidHook/: CMakeLists.txt
ZomboidHook/include/: FileTimes.h  OSCallHandler.h  SQLite.h
ZomboidHook/include/interface/: IFileOps.h  IMemMappedFile.h  IOSCallHandler.h
ZomboidHook/include/win64/: APIHijacker.h
ZomboidHook/src/: OSCallHandler.cpp  SQLite.cpp
ZomboidHook/src/win64/: APIHijacker.cpp  DLLMain.cpp
ZomboidPatcher/: CMakeLists.txt
ZomboidPatcher/src/win64/: ZomboidPatcher.cpp
ext/: CMakeLists.txt
ext/win/: CMakeLists.txt
