if (WIN32)
    add_subdirectory(win)
    set(PLATFORM_DEFINES
            SQLITE_WIN32_HEAP_CREATE)
endif()

add_library(sqlite OBJECT
        sqlite/sqlite3.c sqlite/sqlite3.h sqlite/sqlite3ext.h)
target_include_directories(sqlite PUBLIC sqlite/)
target_compile_definitions(sqlite PUBLIC
        SQLITE_DQS=0
        SQLITE_DEFAULT_MEMSTATUS=0
        SQLITE_DEFAULT_WAL_SYNCHRONOUS=1
        SQLITE_LIKE_DOESNT_MATCH_BLOBS
        SQLITE_MAX_EXPR_DEPTH=0
        SQLITE_OMIT_ALTERTABLE
        SQLITE_OMIT_ANALYZE
        SQLITE_OMIT_AUTHORIZATION
        SQLITE_OMIT_AUTOINCREMENT
        SQLITE_OMIT_AUTOINIT
        SQLITE_OMIT_AUTOMATIC_INDEX
        SQLITE_OMIT_AUTORESET
        SQLITE_OMIT_BETWEEN_OPTIMIZATION
        SQLITE_OMIT_BLOB_LITERAL
        SQLITE_OMIT_CAST
        SQLITE_OMIT_CHECK
        SQLITE_OMIT_COMPLETE
        SQLITE_OMIT_COMPOUND_SELECT
        SQLITE_OMIT_CTE
        SQLITE_OMIT_DATETIME_FUNCS
        SQLITE_OMIT_DECLTYPE
        SQLITE_OMIT_DEPRECATED
        SQLITE_OMIT_DESERIALIZE
        SQLITE_OMIT_EXPLAIN
        SQLITE_OMIT_FOREIGN_KEY
        SQLITE_OMIT_GENERATED_COLUMNS
        SQLITE_OMIT_GET_TABLE
        SQLITE_OMIT_HEX_INTEGER
        SQLITE_OMIT_INTEGRITY_CHECK
        SQLITE_OMIT_INTROSPECTION_PRAGMAS
        SQLITE_OMIT_LIKE_OPTIMIZATION
        SQLITE_OMIT_LOAD_EXTENSION
        SQLITE_OMIT_LOCALTIME
        SQLITE_OMIT_MEMORYDB
        SQLITE_OMIT_OR_OPTIMIZATION
        SQLITE_OMIT_PROGRESS_CALLBACK
        SQLITE_OMIT_REINDEX
        SQLITE_OMIT_SCHEMA_PRAGMAS
        SQLITE_OMIT_SCHEMA_VERSION_PRAGMAS
        SQLITE_OMIT_SHARED_CACHE
        SQLITE_OMIT_SUBQUERY
        SQLITE_OMIT_TCL_VARIABLE
        SQLITE_OMIT_TEMPDB
        SQLITE_OMIT_TRACE
        SQLITE_OMIT_TRUNCATE_OPTIMIZATION
        SQLITE_OMIT_UTF16
        SQLITE_OMIT_VIEW
        SQLITE_OMIT_VIRTUALTABLE
        SQLITE_OMIT_XFER_OPT
        SQLITE_TEMP_STORE=2
        SQLITE_UNTESTABLE
        SQLITE_USE_ALLOCA
        SQLITE_ENABLE_NULL_TRIM
        HAVE_ISNAN
        ${PLATFORM_DEFINES})
